# PINK

./: conanfile.py
devel/: Dockerfile-devel
scripts/: train_hex.py
src/CudaLib/: generate_euclidean_distance_matrix.h  generate_euclidean_distance_matrix_first_step_multi_gpu.h  generate_rotated_images.h
src/PythonBinding/: pink_impl.cpp
src/SelfOrganizingMapLib/: Mapper_generic.h  Trainer_generic.h
src/UtilitiesLib/: InputData.cpp  InputData.h
test/: CMakeLists.txt
test/OpenCVTest/: CMakeLists.txt  image_resize.cpp
test/PinkTest/: CMakeLists.txt  PinkTest.cpp  main.cpp
